fix header not centered
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@55936 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/html/app-header.css
+++ b/web/src/main/resources/org/geogebra/web/resources/html/app-header.css
@@ -8,6 +8,7 @@
 	padding-left: 12px;
 	font-size: 16px;
 	margin: 3px 0;
+	line-height: 17px;
 	font-weight: normal;
 	flex:1;
 }
